welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:2: error: type mismatch;
 found   : Int(21)
 required: Boolean
	return ( 9<a<21 ||9<b<21 )
                     ^