welcome.lessons.welcome.bat.bool1.In1020.scala.code
def in1020(a:Int, b:Int):Boolean = {
	return ( 9<a<21 ||9<b<21 )
}
